# llm-pytest

./: README.md  pyproject.toml
docs/: api.md  llm-providers.md  plugins.md
examples/: test_example.yaml
llm_pytest/: __init__.py  formatter.py  interpolation.py  logging.py  mcp_server.py  models.py  plugin.py  plugin_base.py  runner.py  schema.py
llm_pytest/llm/: __init__.py  base.py  claude_code.py  registry.py
llm_pytest/mcp/: __init__.py  base_server.py  browser_tools.py
llm_pytest/templates/: create_test_system_prompt.jinja2  test_prompt.jinja2
llm_pytest/tools/: __init__.py  create_test.py  plugin_inspector.py
tests/: conftest.py  test_interpolation.py  test_models.py  test_plugin_base.py  test_schema.py
tests/test_tools/: __init__.py  test_create_test.py  test_mcp_tools.py  test_plugin_inspector.py
